keyword align system update

--- a/css/section/keyword.css
+++ b/css/section/keyword.css
@@ -2,7 +2,7 @@
     border-bottom: 3px solid #000;
 }
 #keyword p {
-    width: 150px;
+    max-width: 130px;
     margin: auto;
     text-align: center;
     font-size: 18px;
@@ -11,5 +11,5 @@ i.icon {
     color: var(--parple);
 }
 .icon-box {
-    padding: 10px;
+    padding: 20px 10px;
 }
